--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ enumset = "1.1.3"
 bytemuck = "1.5"
 uuid = "1.1"
 bevy = "0.15"
+bevy_tweening = "0.12"
+itertools = "0.14"
 
 
 bevy_app = "0.15"
