--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -20,6 +20,7 @@ bevy_asset.workspace = true
 egui.workspace = true
 smart-default.workspace = true
 egui_extras.workspace = true
+itertools.workspace = true
 
 bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
 
