--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ uuid = "1.1"
 bevy = "0.15"
 bevy_tweening = "0.12"
 itertools = "0.14"
-
+bevy_mod_outline = "0.9.0"
 
 bevy_app = "0.15"
 bevy_image = "0.15"
